[package]
name = "micecoreos"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-micecoreos.json"
